--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,10 @@ layout: default
 
 <article>
 
-  <div class="container">
 
-    <header class = "mb-5 pb-5">
+    <header class = "mb-5">
       <time datetime="{{ page.date | date_to_xmlschema }}">
-        {%- include date-romain.html -%}
+        Le {%- include date-romain.html -%}
       </time>
       <h1 id="title">{{ page.title | escape }}</h1>
 
@@ -17,30 +16,28 @@ layout: default
 
     </header>
 
-    <div class="content">
+    <div class="article-content">
       {{ content }}
     </div>
 
-  </div>
 
 
-  <div class="author bg-light">
+  <div class="author jumbotron ">
 
-    <div class="container">
-      <div class="row pt-5 pb-5 justify-content-center text-center text-sm-left">
-        <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center ">
-          <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
-        </div>
-        <div class="col-sm">
-          <h5>Marcus</h5>
-          <p>Créateur du site Qambium. Je comprends très vite, mais il faut expliquer longtemps ! :)</p>
-          <a href="https://www.instagram.com/marcusbonus67/">@Instagram</a>
-          <a href="mailto:marc.muller@qambium.fr">@Email</a>
-        </div>
-
+    <div class="row justify-content-center text-center text-sm-left">
+      <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center ">
+        <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
       </div>
+      <div class="col-sm">
+        <h5>Marcus</h5>
+        <p>Créateur du site Qambium. Je comprends très vite, mais il faut expliquer longtemps ! :)</p>
+        <a href="https://www.instagram.com/marcusbonus67/">@Instagram</a>
+        <a href="mailto:marc.muller@qambium.fr">@Email</a>
+      </div>
+
     </div>
-    <!-- .container -->
+
+
 
   </div>
   <!-- .authors -->
@@ -48,7 +45,7 @@ layout: default
 
 
   <div class="comments">
-    <div class="container">
+
 
       {% if jekyll.environment == "production" %}
 
@@ -74,9 +71,6 @@ layout: default
       {% endif %}
 
 
-
-    </div>
-    <!-- .container -->
 
   </div>
   <!-- .comments -->
